Update personal branding logo
[what]
[why]
[how]
[risk]
Auditor:

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 <header class="ui basic very padded segment dream-header">
   
   <div class="ui small circular image">
-    <img src="/img/avatar.jpg" alt="avatar" />
+    <img src="/img/Personal Branding Logo.png" alt="avatar" />
   </div>
   
 
